header, nav first section

--- a/index.html
+++ b/index.html
@@ -33,16 +33,50 @@
                 <img src="" alt="" class="nav__close">
             </ul>
             <div class="nav__menu">
-                <img src="./assets/icons/menu.svg" alt="menu-hamburguesa" class="nav__img">
+                <img src="./assets/icons/bx-menu-alt-right.svg" alt="menu-hamburguesa" class="nav__img">
             </div>
         </nav>
         <section class="hero__container container">
             <h1 class="hero__title">No te conformes, puedes estar mejor</h1>
-            <p class="hero__paragraph">Somos expertos en mejorar tu condición física y jamás estarás sole en este proceso</p>
+            <p class="hero__paragraph">Somos expertos en mejorar tu condición física y te aseguramos que jamás estarás sole en este proceso</p>
             <a href="" class="cta">Comienza ahora</a>
         </section>
     </heder>
 
+    <main>
+        <section class="container terapia">
+            <h2 class="subtitle">Terapias disponibles</h2>
+            <p class="terapias__paragraph">Somos expertos en mejorar padecimientos físicos causados por algún accidente, enfermedad o malas posturas</p>
+            <div class="terapias__main">
+                <article class="terapias__icons">
+                    <img src="./assets/icons/rehabilitacion.png" alt="" class="terapias__icon">
+                    <h3 class="terapias__title">Nivel 1</h3>
+                    <p class="terapias__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, rem. Nisi fugiat odit provident, sapiente minus amet molestiae fugit repellat.</p>
+                </article>
+                <article class="terapias__icons">
+                    <img src="./assets/icons/rehabilitacion.png" alt="" class="terapias__icon">
+                    <h3 class="terapias__title">Nivel 2</h3>
+                    <p class="terapias__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, rem. Nisi fugiat odit provident, sapiente minus amet molestiae fugit repellat.</p>
+                </article>
+                <article class="terapias__icons">
+                    <img src="./assets/icons/rehabilitacion.png" alt="" class="terapias__icon">
+                    <h3 class="terapias__title">Nivel 3</h3>
+                    <p class="terapias__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, rem. Nisi fugiat odit provident, sapiente minus amet molestiae fugit repellat.</p>
+<!--                     <a href="" class="cta">Agenda cita de valoración</a>
+ -->                </article>
+            </div>
+        </section>
+        <section class="knowledge">
+            <div class="knowledge__container contaner">
+                <h2 class="subtitle">Encuentra </h2>
+                <p class="knowledge__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo harum dolorum nam, modi, quae odio esse sequi ullam eligendi quam expedita repellendus tempora nemo aliquam animi quas dicta velit!</p>
+            </div>
+            <figure class="knowledge__picture">
+                <img src="./assets/img/electrostimulation-g6c16c8a86_1280.jpg" alt="" class="knowledge__img">
+
+            </figure>
+        </section>
+    </main>
 
     <script src="./main.js"></script>
 </body>
