--- a/index.html
+++ b/index.html
@@ -62,22 +62,131 @@
                     <img src="./assets/icons/rehabilitacion.png" alt="" class="terapias__icon">
                     <h3 class="terapias__title">Nivel 3</h3>
                     <p class="terapias__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, rem. Nisi fugiat odit provident, sapiente minus amet molestiae fugit repellat.</p>
-<!--                     <a href="" class="cta">Agenda cita de valoración</a>
- -->                </article>
+                </article>
             </div>
         </section>
         <section class="knowledge">
             <div class="knowledge__container contaner">
+                <div class="knowledege__texts">
                 <h2 class="subtitle">Encuentra </h2>
                 <p class="knowledge__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo harum dolorum nam, modi, quae odio esse sequi ullam eligendi quam expedita repellendus tempora nemo aliquam animi quas dicta velit!</p>
+                <a href="" class="cta">Agenda cita</a>
             </div>
             <figure class="knowledge__picture">
-                <img src="./assets/img/electrostimulation-g6c16c8a86_1280.jpg" alt="" class="knowledge__img">
-
+                <img src="./assets/img/compu.png" alt="fisio" class="knowledge__img">
             </figure>
+        </div>
+        </section>
+        <section class="price container">
+            <h2 class="subtitle">Obten el plan perfecto para ti</h2>
+            <div class="price__table">
+                <div class="price__element">
+                    <p class="price__name">Masaje completo</p>
+                    <h3 class="price__price">A domicilio $250</h3>
+                    <div class="price__items">
+                        <p class="price__features">Masaje completo</p>
+                        <p class="price__features">Masaje direccionado</p>
+                        <p class="price__features">Masaje completo</p>
+                    </div>
+                    <a href="#" class="plan__cta">Empieza ahora</a>
+                </div>
+
+                <div class="price__element price__element--best">
+                    <p class="price__name">Consulta a domicilio</p>
+                    <h3 class="price__price">A domicilio $250</h3>
+                    <div class="price__items">
+                        <p class="price__features">Masaje completo</p>
+                        <p class="price__features">Masaje direccionado</p>
+                        <p class="price__features">Masaje completo</p>
+                    </div>
+                    <a href="#" class="plan__cta">Empieza ahora</a>
+                </div>
+
+                <div class="price__element">
+                    <p class="price__name">Terapia</p>
+                    <h3 class="price__price">Consultorio $200</h3>
+
+                    <div class="price__items">
+                        <p class="price__features">Masaje completo</p>
+                        <p class="price__features">Masaje direccionado</p>
+                        <p class="price__features">Masaje completo</p>
+                    </div>
+                    <a href="#" class="plan__cta">Empieza ahora</a>
+                </div>
+
+            </div>
+        </section>
+        <!-- slider -->
+        <section class="testimony">
+            <div class="testimony__container container">
+                <img src="./assets/icons/bx-left-arrow-alt.svg" class="testimony__arrow" id="before" alt="">
+                <section class="testimony__body testimony__body--shown" data-id="1">
+                    <div class="testimony__texts">
+                        <h2 class="subtitle">Mi nombre es Melissa Barrios <span class="testimony__therapy">32 años</span></h2>
+                        <p class="testimony__review">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, odit provident sapiente ab molestias eius ipsa illo, sit deleniti earum nisi assumenda accusamus! Doloribus sit fugiat eius quam accusantium ratione.</p>
+                    </div>
+                    <figure class="testimony__picture">
+                        <img src="./assets/user/3.jpg" alt="" class="testimony__img">
+                    </figure>
+                </section>
+                <section    section class="testimony__body " data-id="2">
+                    <div class="testimony__texts">
+                        <h2 class="subtitle">Mi nombre es Meelissa Barrios <span class="testimony__therapy">33 años</span></h2>
+                        <p class="testimony__review">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, odit provident sapiente ab molestias eius ipsa illo, sit deleniti earum nisi assumenda accusamus! Doloribus sit fugiat eius quam accusantium ratione.</p>
+                    </div>
+                    <figure class="testimony__picture">
+                        <img src="./assets/user/2.jpg" alt="" class="testimony__img">
+                    </figure>
+                </section>
+                <section class="testimony__body " data-id="3">
+                    <div class="testimony__texts">
+                        <h2 class="subtitle">Mi nombre es Meelissa Barrios <span class="testimony__therapy">31 años</span></h2>
+                        <p class="testimony__review">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, odit provident sapiente ab molestias eius ipsa illo, sit deleniti earum nisi assumenda accusamus! Doloribus sit fugiat eius quam accusantium ratione.</p>
+                    </div>
+                    <figure class="testimony__picture">
+                        <img src="./assets/user/3.jpg" alt="" class="testimony__img">
+                    </figure>
+                </section> 
+                <img src="./assets/icons/bx-right-arrow-alt.svg" class="testimony__arrow" id="next" alt="">
+            </div>
+        </section>
+        <section class="questions container">
+            <h2 class="subtitle">Preguntas frecuentes</h2>
+            <p class="questions_paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae totam doloremque perspiciatis consectetur quas iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, blanditiis?</p>
+            <section class="question__container">
+                <article class="question__padding">
+                    <div class="question__answer">
+                        <h3 class="questions__title">¿Eliminare los dolores de espalda causados por mala postura?
+                            <span class="questions__arrow">
+                                <img src="./assets/icons/arrowup.svg" alt="" class="questions__img">
+                            </span>
+                        </h3>
+                        <p class="questions__show">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates fugiat enim corrupti dolore rem excepturi dolorem nihil autem, porro aliquid! Hic aliquid pariatur dolore harum earum quos, ipsam sit voluptatem.</p>
+                    </div>
+                </article>
+                <article class="question__padding">
+                    <div class="question__answer">
+                        <h3 class="questions__title">¿Es cierto que has ayudado a personas sin movilidad en su cuerpo a retomar su vida?
+                            <span class="questions__arrow">
+                                <img src="./assets/icons/arrowup.svg" alt="" class="questions__img">
+                            </span>
+                        </h3>
+                        <p class="questions__show">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates fugiat enim corrupti dolore rem excepturi dolorem nihil autem, porro aliquid! Hic aliquid pariatur dolore harum earum quos, ipsam sit voluptatem.</p>
+                    </div>
+                </article>
+                <article class="question__padding">
+                    <div class="question__answer">
+                        <h3 class="questions__title">¿Das consultas en cualquier parte de Zacatlan?<span class="questions__arrow"><img src="./assets/icons/arrowup.svg" alt="" class="questions__img">
+                            </span>
+                        </h3>
+                        <p class="questions__show">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates fugiat enim corrupti dolore rem excepturi dolorem nihil autem, porro aliquid! Hic aliquid pariatur dolore harum earum quos, ipsam sit voluptatem.</p>
+                    </div>
+                </article>
+            </section>
         </section>
     </main>
 
-    <script src="./main.js"></script>
+    <script src="./js/slider.js"></script>
+    <script src="./js/questions.js"></script>
 </body>
 </html>
