--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <a href="" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="" class="nav__links">Tipo de terapia</a>
+                    <a href="" class="nav__links" id="tipos">Tipo de terapia</a>
                 </li>
                 <li class="nav__items">
-                    <a href="" class="nav__links">Contacto</a>
+                    <a href="" class="nav__links" id="contacto">Contacto</a>
                 </li>
                 <li class="nav__items">
                     <a href="" class="nav__links">Testimonios</a>
@@ -45,7 +45,7 @@
 
     <main>
         <section class="container terapia">
-            <h2 class="subtitle">Terapias disponibles</h2>
+            <h2 class="subtitle" id="#tipos">Terapias disponibles</h2>
             <p class="terapias__paragraph">Somos expertos en mejorar padecimientos físicos causados por algún accidente, enfermedad o malas posturas</p>
             <div class="terapias__main">
                 <article class="terapias__icons">
@@ -184,7 +184,50 @@
                 </article>
             </section>
         </section>
+        <section class="questions__offer container">
+            <h2 class="subtitle">Contáctanos, nosotros seremos felices por verte mejorar de cualquier aflicción</h2>
+            <p class="questions__copy">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sequi nulla repellendus deserunt maxime animi explicabo molestias vero sint voluptas, tempore saepe. Ducimus iusto quasi dolorem consequatur minima architecto nisi.
+            </p>
+            <a href="" class="cta">Agenda tu cita ahora</a>
+        </section>
     </main>
+    <footer class="footer" >
+        <section class="footer__container container">
+            <nav class="nav nav--footer">
+                <h2 class="footer__title">Fisioterapia con Meli</h2>
+                <ul class="nav__link nav__link--footer">
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Masaje terapeutico</a>
+                    </li>
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Terapias</a>
+                    </li>
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Contacto</a>
+                    </li>
+                    <li class="nav__items">
+                        <a href="" class="nav__links">Testimonios</a>
+                    </li>
+                </ul>
+            </nav>
+            <form action="" class="footer__form">
+                <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
+                <div class="footer__inputs">
+                    <input type="email" name="" placeholder="Email" class="footer__input" id="">
+                    <input type="submit" value="Registrate" class="footer__submit">
+                </div>
+            </form>
+        </section>
+        <section class="footer__copy container">
+            <div class="footer__social">
+                <a href="" class="footer__icons"><img src="./assets/icons/facebook.svg" class="footer__img" alt=""></a>
+                <a href="" class="footer__icons"><img src="./assets/icons/instagram.svg" class="footer__img" alt=""></a>
+                <a href="" class="footer__icons"><img src="./assets/icons/twitter.svg" class="footer__img" alt=""></a>
+            </div>
+            <h3 class="footer__copyright">Derechos reservados &copy; Meli Barrios</h3>
+        </section>
+    </footer>
 
     <script src="./js/slider.js"></script>
     <script src="./js/questions.js"></script>
