--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normaliaze.css">
     <link rel="stylesheet" href="./css/style.css">
+
+    <meta name="theme-color" content="#2091f9">
+    <!-- Primary Meta Tags -->
+<title>En fisioterapia con Meli te ayudaremos a mejorar tu condición fisica</title>
+<meta name="title" content="En fisioterapia con Meli te ayudaremos a mejorar tu condición fisica">
+<meta name="description" content="Agenda tu cita de valoración y crearemos una rutina que te asegurará a sentirte mejor.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://melibis.github.io">
+<meta property="og:title" content="En fisioterapia con Meli te ayudaremos a mejorar tu condición fisica">
+<meta property="og:description" content="Agenda tu cita de valoración y crearemos una rutina que te asegurará a sentirte mejor.">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="En fisioterapia con Meli te ayudaremos a mejorar tu condición fisica">
+<meta property="twitter:description" content="Agenda tu cita de valoración y crearemos una rutina que te asegurará a sentirte mejor.">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 </head>
 <body>
     <heder class="hero">
@@ -22,7 +42,7 @@
                     <a href="" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="" class="nav__links" id="tipos">Tipo de terapia</a>
+                    <a href="·" class="nav__links" id="tipos">Tipo de terapia</a>
                 </li>
                 <li class="nav__items">
                     <a href="" class="nav__links" id="contacto">Contacto</a>
@@ -30,7 +50,7 @@
                 <li class="nav__items">
                     <a href="" class="nav__links">Testimonios</a>
                 </li>
-                <img src="" alt="" class="nav__close">
+                <img src="./assets/icons/close.svg" alt="cerrar" class="nav__close">
             </ul>
             <div class="nav__menu">
                 <img src="./assets/icons/bx-menu-alt-right.svg" alt="menu-hamburguesa" class="nav__img">
@@ -65,12 +85,12 @@
                 </article>
             </div>
         </section>
-        <section class="knowledge">
-            <div class="knowledge__container contaner">
+        <section class="knowledge  ">
+            <div class="knowledge__container container">
                 <div class="knowledege__texts">
-                <h2 class="subtitle">Encuentra </h2>
+                <h2 class="subtitle">Contáctanos y estarás más cerca de las terapias que cambiarán tu vida </h2>
                 <p class="knowledge__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia quo harum dolorum nam, modi, quae odio esse sequi ullam eligendi quam expedita repellendus tempora nemo aliquam animi quas dicta velit!</p>
-                <a href="" class="cta">Agenda cita</a>
+                <a href="·" class="cta">Agenda tu cita</a>
             </div>
             <figure class="knowledge__picture">
                 <img src="./assets/img/compu.png" alt="fisio" class="knowledge__img">
@@ -78,7 +98,7 @@
         </div>
         </section>
         <section class="price container">
-            <h2 class="subtitle">Obten el plan perfecto para ti</h2>
+            <h2 class="subtitle">Obten la rutina perfecta para ti</h2>
             <div class="price__table">
                 <div class="price__element">
                     <p class="price__name">Masaje completo</p>
@@ -99,7 +119,7 @@
                         <p class="price__features">Masaje direccionado</p>
                         <p class="price__features">Masaje completo</p>
                     </div>
-                    <a href="#" class="plan__cta">Empieza ahora</a>
+                    <a href="#" class="plan__cta--best">Empieza ahora</a>
                 </div>
 
                 <div class="price__element">
@@ -129,9 +149,9 @@
                         <img src="./assets/user/3.jpg" alt="" class="testimony__img">
                     </figure>
                 </section>
-                <section    section class="testimony__body " data-id="2">
+                <section class="testimony__body " data-id="2">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Meelissa Barrios <span class="testimony__therapy">33 años</span></h2>
+                        <h2 class="subtitle">Mi nombre es MeeliB <span class="testimony__therapy">32 años</span></h2>
                         <p class="testimony__review">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, odit provident sapiente ab molestias eius ipsa illo, sit deleniti earum nisi assumenda accusamus! Doloribus sit fugiat eius quam accusantium ratione.</p>
                     </div>
                     <figure class="testimony__picture">
@@ -140,8 +160,8 @@
                 </section>
                 <section class="testimony__body " data-id="3">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Meelissa Barrios <span class="testimony__therapy">31 años</span></h2>
-                        <p class="testimony__review">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, odit provident sapiente ab molestias eius ipsa illo, sit deleniti earum nisi assumenda accusamus! Doloribus sit fugiat eius quam accusantium ratione.</p>
+                        <h2 class="subtitle">Mi nombre es MeliBis <span class="testimony__therapy">32 años</span></h2>
+                        <p class="testimony__review">Lorem, odit provident sapiente ab molestias eius ipsa illo, sit deleniti earum nisi assumenda accusamus! Doloribus sit fugiat eius quam accusantium ratione.</p>
                     </div>
                     <figure class="testimony__picture">
                         <img src="./assets/user/3.jpg" alt="" class="testimony__img">
@@ -184,13 +204,14 @@
                 </article>
             </section>
         </section>
-        <section class="questions__offer container">
+        <section class="hero__container container">
             <h2 class="subtitle">Contáctanos, nosotros seremos felices por verte mejorar de cualquier aflicción</h2>
             <p class="questions__copy">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sequi nulla repellendus deserunt maxime animi explicabo molestias vero sint voluptas, tempore saepe. Ducimus iusto quasi dolorem consequatur minima architecto nisi.
             </p>
             <a href="" class="cta">Agenda tu cita ahora</a>
         </section>
+        
     </main>
     <footer class="footer" >
         <section class="footer__container container">
@@ -211,10 +232,11 @@
                     </li>
                 </ul>
             </nav>
-            <form action="" class="footer__form">
+            <form  action="https://formspree.io/f/xknabgdr"
+            method="POST" class="footer__form">
                 <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
                 <div class="footer__inputs">
-                    <input type="email" name="" placeholder="Email" class="footer__input" id="">
+                    <input type="email" name="name="email"" placeholder="Email" class="footer__input" id="">
                     <input type="submit" value="Registrate" class="footer__submit">
                 </div>
             </form>
@@ -231,5 +253,6 @@
 
     <script src="./js/slider.js"></script>
     <script src="./js/questions.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
