--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
                 <div class="footer__inputs">
                     <input type="email" name="name="email"" placeholder="Email" class="footer__input" id="">
-                    <input type="submit" value="Registrate" class="footer__submit">
+                    <input type="submit" value="Regístrate" class="footer__submit">
                 </div>
             </form>
         </section>
